# facto-rs

./: .gitignore  Cargo.toml  README.md
algorithms/: Cargo.toml
algorithms/src/: lib.rs
benches/: README.md  gen.py  my_benches.rs
dixon/: Cargo.toml
dixon/src/: lib.rs  main.rs
examples/: dixon.rs  fermat.rs  qs_builder.rs  qs_simple.rs  qs_threaded.rs  trial_div.rs
fermat/: Cargo.toml
fermat/src/: lib.rs  main.rs
quadratic-sieve/: Cargo.toml
quadratic-sieve/src/: lib.rs  main.rs
src/: algorithms.rs  dixon.rs  fermat.rs  lib.rs  quadratic_sieve.rs  traits.rs  trial_division.rs
traits/: Cargo.toml
traits/src/: lib.rs
trial-division/: Cargo.toml
trial-division/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
