[package]
name = "facto-rs"
version = "0.1.0"
authors = ["Dacian Stroia <zademnwalves@gmail.com>"]
description = "Factorization crate based on Rug"
keywords = ["factorization", "bigint", "cryptography"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
lazy_static = "1.4.0"
nalgebra = "0.30.1"
rug = "1.15.0"

[dev-dependencies]
criterion = "0.3.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3


[[bench]]
name = "my_benches"
harness = false