[package]
name = "quadratic-sieve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traits = { path = "../traits" }
algorithms = { path = "../algorithms" }
indicatif = "0.16.2"
nalgebra = "0.30.1"
rug = "1.15.0"
